# NeuroSiphon

./: .gitignore  CHANGELOG.md  Cargo.toml  MCP_SETUP.md  README.md  USE_CASES.md
.github/: copilot-instructions.md
.github/workflows/: release.yml
core/: Cargo.toml
core/src/: config.rs  inspector.rs  lib.rs  main.rs  mapper.rs  scanner.rs  server.rs  slicer.rs  vector_store.rs  xml_builder.rs
docs/: BUILDING.md  MCP_SETUP.md
scripts/: bench_run.zsh  bench_work.zsh
src/: chronos.rs  config.rs  grammar_manager.rs  inspector.rs  lib.rs  main.rs  mapper.rs  rules.rs  scanner.rs  server.rs  slicer.rs  universal.rs  vector_store.rs  workspace.rs  xml_builder.rs
tests/: mcp_stdio_smoke.rs
