[package]
name = "neurosiphon"
version = "1.1.0"
edition = "2021"
description = "God-tier context optimizer for LLMs using AST skeletonization and JIT hybrid search."
authors = ["Thanon Aphithanawat <thanon@aphithanawat.me>"]
repository = "https://github.com/DevsHero/NeuroSiphon"
keywords = ["llm", "mcp", "context", "optimization", "rust", "vector-search"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ignore = "0.4"
glob = "0.3"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
quick-xml = "0.31"
toml = "0.8"
regex = "1.10"
rayon = "1.10"
indicatif = "0.17"

# Hybrid search (local embeddings + flat-file vector index with brute-force cosine)
# model2vec-rs: static embeddings via HuggingFace Hub; no ONNX runtime required.
# Vector index: serde_json flat-file index with O(n*d) cosine search (n<=400 files, d=256 dims).
model2vec-rs = "0.1.4"

# Deep-dive inspection (symbol extraction)
tree-sitter = "0.26.5"
tree-sitter-rust = "0.21.0"
tree-sitter-typescript = "0.21.0"
tree-sitter-python = "0.21.0"
tree-sitter-go = { version = "0.21.0", optional = true }
tree-sitter-dart = { version = "0.0.4", optional = true }
tree-sitter-java = { version = "0.21.0", optional = true }
tree-sitter-c-sharp = { version = "0.21.0", optional = true }
tree-sitter-php = { version = "0.23.0", optional = true }

[features]
# Enable all tree-sitter language grammars by default for full multi-language support.
# These are compiled from C source and add a few seconds to fresh builds, but subsequent
# incremental builds are nearly instant.
default = ["lang-go", "lang-dart", "lang-java", "lang-csharp", "lang-php"]

lang-go = ["dep:tree-sitter-go"]
lang-dart = ["dep:tree-sitter-dart"]
lang-java = ["dep:tree-sitter-java"]
lang-csharp = ["dep:tree-sitter-c-sharp"]
lang-php = ["dep:tree-sitter-php"]

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
