[package]
name = "context-slicer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ignore = "0.4"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
quick-xml = "0.31"
toml = "0.8"
regex = "1.10"
rayon = "1.10"
indicatif = "0.17"

# Hybrid search (local embeddings + embedded vector DB)
model2vec-rs = "0.1.4"
lancedb = "0.4"

# LanceDB 0.4 expects Arrow RecordBatches for ingestion and returns Arrow streams.
arrow-array = "51.0.0"
arrow-schema = "51.0.0"
futures = "0.3"

# Workaround: arrow-arith (transitive via lancedb) currently fails to compile with chrono>=0.4.43
# due to an ambiguous `quarter()` method. Pin chrono to a compatible version.
chrono = "=0.4.39"

# Deep-dive inspection (symbol extraction)
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-go = { version = "0.20.0", optional = true }
tree-sitter-dart = { version = "0.0.4", optional = true }
tree-sitter-java = { version = "0.20.0", optional = true }
tree-sitter-c-sharp = { version = "0.20.0", optional = true }
tree-sitter-php = { version = "=0.22.2", optional = true }

[features]
# Default to "all" languages for now; disable individual languages to reduce compile times.
default = ["lang-go", "lang-dart", "lang-java", "lang-csharp", "lang-php"]

lang-go = ["dep:tree-sitter-go"]
lang-dart = ["dep:tree-sitter-dart"]
lang-java = ["dep:tree-sitter-java"]
lang-csharp = ["dep:tree-sitter-c-sharp"]
lang-php = ["dep:tree-sitter-php"]

[profile.release]
lto = false
codegen-units = 16
strip = "none"
